// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonElements/Styled GreyButtonStyle snapshot by default 1`] = `
.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(118,118,118);
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

<button
  className="c0"
/>
`;

exports[`ButtonElements/Styled IconInButtonStyle snapshot by default 1`] = `
.c0 {
  margin-right: 0.375rem;
}

@media (min-width:47.94rem) {
  .c0 {
    margin-right: 0.625rem;
  }
}

<span
  className="c0"
/>
`;

exports[`ButtonElements/Styled RedButtonStyle snapshot by default 1`] = `
.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(232,24,68);
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

<button
  className="c0"
/>
`;
